fixed the bottom spacing problem

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -19,6 +19,8 @@
   margin-right: 0
 
 #categories
+  margin-bottom: 80px
+
   h1
     background: #0094DA
     color: #fff
